force-app/main/default/objects/User_City_Assignment__c/User_City_Assignment__c.object-meta.xml
<CustomObject>
    <label>User City Assignment</label>
    <nameField>
        <displayFormat>US-{00000}</displayFormat>
        <label>User City Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User City Assignment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>