force-app/main/default/objects/User_City_Assignment__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_City_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>