force-app/main/default/objects/User_City_Assignment__c/fields/WellSpring_Location__c.field-meta.xml
<CustomField>
    <fullName>WellSpring_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WellSpring Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>User City Assignment</relationshipLabel>
    <relationshipName>User_City_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>