force-app/main/default/objects/User_City_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WellSpring_Location__c</columns>
    <columns>User__c</columns>
    <columns>Primary_Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>